<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="app.discovery.com.idiscovery.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_name"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <EditText
                android:id="@+id/report_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/report_name"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <EditText
                android:id="@+id/activity_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/activity_date"
                android:inputType="date"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <EditText
                android:id="@+id/location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_name"
                android:textAppearance="@android:style/TextAppearance.Large"/>


            <EditText
                android:id="@+id/attending_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/attending_time"
                android:inputType="time"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/btn_submit"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
