<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": Cool sport"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reporter"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/report_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=": Kaka"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_date"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/activity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=": 10/20/2017"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_location"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=": Ha Noi"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_time"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/attending_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=": 10:30"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>